crates/overdrive-worker/tests/compile_fail/exec_driver_missing_fs.stderr
error[E0061]: this function takes 3 arguments but 2 arguments were supplied
 --> tests/compile_fail/exec_driver_missing_fs.rs:19:19
  |
 19 |     let _driver = ExecDriver::new(PathBuf::from("/"), clock);
    |                   ^^^^^^^^^^^^^^^--------------------------- argument #3 of type `Arc<(dyn CgroupFs + 'static)>` is missing
    |
note: associated function defined here
   --> src/driver.rs
    |
    |     pub fn new(cgroup_root: PathBuf, clock: Arc<dyn Clock>, fs: Arc<dyn CgroupFs>) -> Self {
    |            ^^^
help: provide the argument
    |
 19 |     let _driver = ExecDriver::new(PathBuf::from("/"), clock, /* Arc<(dyn CgroupFs + 'static)> */);
    |                                                            +++++++++++++++++++++++++++++++++++++
